# virtual-memory-manager

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
include/: FIFOManager.h  LRUManager.h  MemoryManager.h  OptimalManager.h
src/: FIFOManager.cpp  LRUManager.cpp  MemoryManager.cpp  MemoryManager.h  OptimalManager.cpp  main.cpp
test/: test_input.txt
